--- a/code/style.css
+++ b/code/style.css
@@ -20,9 +20,11 @@ h2 {
 h3 {
   font-size: 50px;
   font-style: italic;
-
 }
 
+h4 {
+  font-size:30px;
+}
 
 
 
@@ -251,17 +253,24 @@ header {
 
 /* SMALL NEWS*/
 
+.small-news p {
+font-size: 25px;
+
+}
+
 .small {
 width: 664px;
 display: flex;
 flex-wrap: wrap;
 flex-direction: column;
+
 }
 
 .small-news {
-  height: 200px;
+  height: 400px;
   margin: 40px;
   padding: 50px;
+  text-align: center;
   background-color: #F8ECEC;
   border-color: #F7E6E6;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
@@ -301,6 +310,13 @@ flex-direction: column;
   opacity: 1;
 }
 
+.small .small-img {
+  justify-content: center;
+  width: 300px;
+
+
+
+}
 
 
 
