pictures adjusted to tablet and desktop

--- a/code/style.css
+++ b/code/style.css
@@ -334,7 +334,7 @@ flex-direction: column;
 
   .small-news {
     width: 280px;
-    height: 250px;
+    height: 450px;
    
   }  
 }
@@ -353,10 +353,15 @@ flex-direction: column;
 
   .small-news {
     width: 200px;
-    height: 200px;
+    height: 350px;
     margin: 20px;
     margin-left: 25px;
   }  
+  .small .small-img {
+    width: 200px;
+  
+  }
+
 }
    
 
