--- a/code/style.css
+++ b/code/style.css
@@ -1,29 +1,48 @@
+
+/* Header */
+
+header {
+  background: wheat;
+  height: 220px;
+  width: 100%;
+  
+}
+
+header img {
+  float: none;
+  
+}
+
+/* body */
+
 body {
   margin: 0;
   width: 100%;
   height: 100%;
+  background: wheat;
+  
 }
 
-/* Header */
-header {
-  background: whitesmoke;
-  height: 200px;
-  
+/* introduction section */
+
+.introduction {
+
+  background: darkolivegreen;
+  border: solid black;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: center;
+
 }
 
 /* Main news */
 
 .big-news {
- 
   display: flex;
-  background: orangered;
   align-items: center;
   justify-content: center;
 }
 
 .big-news div {
-  
- 
   margin: 5px;
   align-content: space-between;
   justify-content: center;
@@ -33,27 +52,25 @@ header {
 }
 
 .big-news img {
-  width: 100%;
-  float: left;
+  width: 90%;
+  
 }
 
 div:hover {
-  background-color: yellow;
+  background-color: whitesmoke;
+  opacity: 0.5;
 }
 
 /* Other news grid */
 
 .other-news {
- 
   display: flex;
   flex-direction: column;
-  background: blue;
   align-items: center;
   justify-content: center;
 }
 
 .other-news div {
- 
   margin: 10px;
   align-content: space-between;
   justify-content: center;
@@ -63,7 +80,23 @@ div:hover {
 }
 
 .other-news img {
+  width: 90%;
+}
+
+/* footer */
+
+footer {
+  height: 50px;
   width: 100%;
+  border: solid black;
+  background: darkolivegreen
+
+}
+
+footer h2 {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: center;
+  
 }
 
 /* media tablet*/
@@ -71,7 +104,7 @@ div:hover {
 @media (min-width: 667px) and (max-width: 1024px) {
 
   header {
-    background-color: orange;
+    
   }
 
 .other-news {
@@ -95,7 +128,7 @@ div:hover {
 @media (min-width: 1025px) {
 
   header {
-    background-color: purple;
+   
   }
 
   .other-news {
