Box shadow + update readme

--- a/code/style.css
+++ b/code/style.css
@@ -111,9 +111,7 @@ article {
   background-size: cover;
   background-position: center;
   height: 200px;
-  -webkit-box-shadow: 0px -10px 25px -16px rgba(148,140,148,1);
-  -moz-box-shadow: 0px -10px 25px -16px rgba(148,140,148,1);
-  box-shadow: 0px -10px 25px -16px rgba(148,140,148,1);
+  box-shadow: 10px 0px 10px 0px rgba(177, 176, 177, 0.5);
 }
 
 article p {
