--- a/code/style.css
+++ b/code/style.css
@@ -191,6 +191,13 @@ p{
   text-align: center;
 }
 
+.red {
+  background-color: red;
+}
+
+.red:hover .imageimage-news1 {
+  opacity: 0.3;
+}
 
 /***** FOOTER ****/ 
 
