--- a/code/style.css
+++ b/code/style.css
@@ -263,6 +263,7 @@ width: 664px;
 display: flex;
 flex-wrap: wrap;
 flex-direction: column;
+margin-top: 50px;
 
 }
 
@@ -273,7 +274,7 @@ flex-direction: column;
   text-align: center;
   background-color: #F8ECEC;
   border-color: #F7E6E6;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 4px 2px 4px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
   transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
@@ -348,6 +349,7 @@ flex-direction: column;
     flex-direction: row;
     justify-content: space-between;
     margin: 8px;
+    margin-top: 30px;
         
   }
 
@@ -414,10 +416,62 @@ flex-direction: column;
 
 
 
+
+/* BUTTON, */
+
+.button {
+  width: 660px;
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+button   {
+  background-color: #F8ECEC;
+  border-radius: 15px;
+  border-style: hidden;
+  color:black;
+  padding: 20px 40px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 35px;
+  font-family: 'Times New Roman', Times, serif
+}
+
+button:hover {
+  background-color:lightpink;
+
+}
+
+button:active {
+  background-color: lightpink;;
+  box-shadow: 0 5px #555;
+  transform: translateY(4px);
+}
+
+
+@media screen and (min-width: 667px) and (max-width:1024px) {
+  .button{
+    width: 1350px; 
+  }
+  
+}
+
+@media screen and (min-width: 1024px) {
+  .button{
+    width: 1450px;
+  }
+}
+
+
+
+
+
+
+
+
+
 /* FOOTER */
-/* ADD BUTTON, */
-
-
 
 
 .footer {
@@ -444,6 +498,10 @@ flex-direction: column;
       width: 1450px;
     }
   }
+
+
+
+
 
 
 
