--- a/code/style.css
+++ b/code/style.css
@@ -89,7 +89,7 @@ footer {
   height: 50px;
   width: 100%;
   border: solid black;
-  background: darkolivegreen
+  background: darkolivegreen;
 
 }
 
